// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<H2 /> should adopt the "isError" property 1`] = `
.c0 {
  color: white;
  overflow-wrap: break-word;
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: normal !important;
  font-weight: 700 !important;
}

<h2
  className="c0"
/>
`;

exports[`<H2 /> should render and match the snapshot 1`] = `
.c0 {
  color: #aedd2c;
  overflow-wrap: break-word;
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: normal !important;
  font-weight: 700 !important;
}

<h2
  className="c0"
/>
`;
